--- a/.github/workflows/john.yml
+++ b/.github/workflows/john.yml
@@ -48,7 +48,8 @@ jobs:
       - name: Show
         id: show_result
         run: |
-          echo "text<<EOF" >> $GITHUB_OUTPUT
+          echo "### Cracking completed! :rocket:" >> $GITHUB_STEP_SUMMARY
+          echo "RESULT<<EOF" >> $GITHUB_OUTPUT
           echo "$(john-1.8.0.9-jumbo-macosx_sse4/run/john --show hash)" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
       
