--- a/.github/workflows/john.yml
+++ b/.github/workflows/john.yml
@@ -5,9 +5,9 @@ on:
     branches: ["**"]
 
 jobs:
-  build:
+  crack:
     runs-on: macos-12
-
+    timeout-minutes: 120
     steps:
       - uses: actions/checkout@v2
 
@@ -43,7 +43,7 @@ jobs:
 
       - name: Cracking
         run: |
-          john-1.8.0.9-jumbo-macosx_sse4/run/john -w=rockyou.txt hash
+          john-1.8.0.9-jumbo-macosx_sse4/run/john --format=phpass -w=rockyou.txt hash
 
       - name: Show
         id: show_result
